# Ai-Stuff

./: .gitignore  LICENSE  README.md  Welcome_To_Colab.ipynb  settings.gradle.kts
.applab/: local-ai-workbench-request.json
.github/scripts/: generate-coding-ai-page.sh
.github/workflows/: build-android.yml  build-apk-on-marker.yml  build-local-ai-workbench.yml  import-smolchat-test2.yml  localai-requested-apk.yml  pages.yml
android-plugin/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-plugin/plugin/: build.gradle.kts  proguard-rules.pro
android-plugin/plugin/src/main/: AndroidManifest.xml
android-plugin/plugin/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/: build.gradle.kts  export_presets.cfg  project.godot
app/addons/LocalAI/: export_plugin.gd  plugin.cfg
app/data/: models.json
app/scenes/: Main.tscn
app/scripts/: main.gd
app/src/main/: AndroidManifest.xml
colab/: README.md  requirements.txt
datasets/: android_coding_corrections_v1.jsonl  android_coding_seed_v1.jsonl
docs/: 360-debug.html  360-debug.js  404.html  APK_DELIVERY.md  ARCHITECTURE.md  BUILD.md  BUILD_STATE.md  ROADMAP.md  app-v2.js  app-v3.js  app.js  index.html  review-tools.js  runtime-notes.html
evals/: android_coding_eval_v1.json
notebooks/: README.md
pages_src/: app.js  style.css
pages_src/prompts/: smoke_coding_prompts.json
project_docs/: ANDROID_BASELINE_REVIEW_360M_V1.md  ANDROID_CODEFIRST_REVIEW_360M_V1.md  ANDROID_FINE_TUNE_PLAN.md  BEGINNER_MAP.md  GLOSSARY.md  PAGES_TESTER_PLAN.md  PROJECT_GOAL.md
scripts/: validate_catalog.py
(+3 files in other folders)
